properties and companies: cleaned

--- a/clean_properties.ipynb
+++ b/clean_properties.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -480,49 +480,122 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('raw_data/properties.csv', on_bad_lines='skip')\n",
-    "df.info()\n",
-    "print(df.head(10))"
+    "raw_df = pd.read_csv('raw_data/properties.csv', on_bad_lines='skip')\n",
+    "raw_df.info()\n",
+    "print(raw_df.head(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['nexrm_propertyid', 'createdon', 'createdby', 'modifiedon',\n",
-       "       'modifiedby', 'createdbyname', 'createdbyyominame', 'modifiedbyname',\n",
-       "       'modifiedbyyominame', 'organizationid', 'organizationidname',\n",
-       "       'statecode', 'statecodename', 'statuscode', 'statuscodename',\n",
-       "       'timezoneruleversionnumber', 'utcconversiontimezonecode', 'nexrm_name',\n",
-       "       'nexrm_address1', 'nexrm_city', 'nexrm_state', 'nexrm_zip',\n",
-       "       'wcp_propertytypeid', 'wcp_propertytypeidname', 'wcp_bedroomsprop',\n",
-       "       'wcp_sqftprop', 'wcp_county', 'wcp_countyname', 'nexrm_fulladdress',\n",
-       "       'nexrm_latitude', 'nexrm_longitude', 'nexrm_validatedaddress',\n",
-       "       'nexrm_countyfipscode', 'nexrm_validatedaddresson',\n",
-       "       'wcp_bathroomsprop'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropped Columns: \n",
+      "\n",
+      "Index(['nexrm_propertyid', 'createdon', 'createdby', 'modifiedon',\n",
+      "       'modifiedby', 'createdonbehalfby', 'modifiedonbehalfby',\n",
+      "       'createdbyname', 'createdbyyominame', 'createdonbehalfbyname',\n",
+      "       'createdonbehalfbyyominame', 'modifiedbyname', 'modifiedbyyominame',\n",
+      "       'modifiedonbehalfbyname', 'modifiedonbehalfbyyominame',\n",
+      "       'organizationid', 'organizationidname', 'statecode', 'statecodename',\n",
+      "       'statuscode', 'statuscodename', 'emailaddress', 'importsequencenumber',\n",
+      "       'overriddencreatedon', 'timezoneruleversionnumber',\n",
+      "       'utcconversiontimezonecode', 'nexrm_name', 'nexrm_address1',\n",
+      "       'nexrm_address2', 'nexrm_city', 'nexrm_state', 'nexrm_zip',\n",
+      "       'wcp_accessinformation', 'wcp_sentrilock', 'wcp_combo',\n",
+      "       'wcp_propertytypeid', 'wcp_propertytypeidname', 'wcp_bedroomsprop',\n",
+      "       'wcp_sqftprop', 'wcp_county', 'wcp_countyname',\n",
+      "       'wcp_propertydescription', 'wcp_propertyowner', 'wcp_propertyownername',\n",
+      "       'wcp_propertyowneryominame', 'wcp_secondaryowner',\n",
+      "       'wcp_secondaryownername', 'wcp_secondaryowneryominame',\n",
+      "       'nexrm_fulladdress', 'nexrm_latitude', 'nexrm_longitude',\n",
+      "       'nexrm_validatedaddress', 'nexrm_photogallery',\n",
+      "       'nexrm_photogalleryname', 'nexrm_countyfipscode',\n",
+      "       'nexrm_validatedaddresson', 'nexrm_pubapn',\n",
+      "       'nexrm_pubarchitecturalstyle', 'nexrm_pubbaths', 'nexrm_pubblock',\n",
+      "       'nexrm_pubcity', 'nexrm_pubcomments', 'nexrm_pubcondition',\n",
+      "       'nexrm_pubdistrict', 'nexrm_pubfips', 'nexrm_pubfulladdress',\n",
+      "       'nexrm_pubfullbaths', 'nexrm_publegaldescription', 'nexrm_publegalunit',\n",
+      "       'nexrm_publot', 'nexrm_pubmunicipality', 'nexrm_puboccupancystatus',\n",
+      "       'nexrm_pubownername', 'nexrm_pubphase', 'nexrm_pubsection',\n",
+      "       'nexrm_pubstate', 'nexrm_pubsubdivisionname', 'nexrm_pubtotalrooms',\n",
+      "       'nexrm_pubtotalstories', 'nexrm_pubtownship', 'nexrm_pubyearbuilt',\n",
+      "       'nexrm_pubzip', 'nexrm_pubtract', 'nexrm_pubdateupdated',\n",
+      "       'wcp_bathroomsprop', 'wcp_propertymsa', 'wcp_propertymsaname',\n",
+      "       'wcp_validatedaddressjson'],\n",
+      "      dtype='object')\n"
+     ]
     }
    ],
    "source": [
-    "df = df.dropna(thresh=3000,axis=1, how='all')\n",
-    "df.isnull().sum()\n",
-    "df.columns"
+    "df = raw_df.dropna(thresh=3000,axis=1, how='all')\n",
+    "only_na = raw_df[~raw_df.index.isin(df.index)]\n",
+    "\n",
+    "print('Dropped Columns: \\n')\n",
+    "print(only_na.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finalized Columns: \n",
+      "\n",
+      "Index(['nexrm_propertyid', 'createdon', 'createdby', 'modifiedon',\n",
+      "       'modifiedby', 'createdbyname', 'createdbyyominame', 'modifiedbyname',\n",
+      "       'modifiedbyyominame', 'organizationid', 'organizationidname',\n",
+      "       'statecode', 'statecodename', 'statuscode', 'statuscodename',\n",
+      "       'timezoneruleversionnumber', 'utcconversiontimezonecode', 'nexrm_name',\n",
+      "       'nexrm_address1', 'nexrm_city', 'nexrm_state', 'nexrm_zip',\n",
+      "       'wcp_propertytypeid', 'wcp_propertytypeidname', 'wcp_bedroomsprop',\n",
+      "       'wcp_sqftprop', 'wcp_county', 'wcp_countyname', 'nexrm_fulladdress',\n",
+      "       'nexrm_latitude', 'nexrm_longitude', 'nexrm_validatedaddress',\n",
+      "       'nexrm_countyfipscode', 'nexrm_validatedaddresson',\n",
+      "       'wcp_bathroomsprop'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Finalized Columns: \\n')\n",
+    "print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_73026/537646292.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['wcp_bathroomsprop'].replace(0.0, np.nan, inplace=True)\n",
+      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_73026/537646292.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['wcp_bedroomsprop'].replace(0.0, np.nan, inplace=True)\n",
+      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_73026/537646292.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['wcp_sqftprop'].replace(0.0, np.nan, inplace=True)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1124,7 +1197,7 @@
        "9               24033.0   2022-11-24 00:11:52+00                1.1  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
