--- a/clean_properties.ipynb
+++ b/clean_properties.ipynb
@@ -579,17 +579,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_73026/537646292.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_93766/537646292.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['wcp_bathroomsprop'].replace(0.0, np.nan, inplace=True)\n",
-      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_73026/537646292.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_93766/537646292.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['wcp_bedroomsprop'].replace(0.0, np.nan, inplace=True)\n",
-      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_73026/537646292.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_93766/537646292.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1222,6 +1222,15 @@
     "#nexrm_latitude\n",
     "#nexrm_longitude\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('properties_cleaned.csv', index=False)"
    ]
   }
  ],
