--- a/clean_properties.ipynb
+++ b/clean_properties.ipynb
@@ -1230,7 +1230,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('properties_cleaned.csv', index=False)"
+    "df.to_csv('properties_cleaned.csv', index=False, sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Land', 'Single Family', 'Fourplex', 'Residential Multi-Family',\n",
+       "       nan, 'Commercial', 'Multi Family', 'Condo', 'Duplex', 'Triplex',\n",
+       "       'Mixed Use', 'Townhouse/Rowhouse'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['wcp_propertytypeidname'].unique()"
    ]
   }
  ],
