--- a/clean_properties.ipynb
+++ b/clean_properties.ipynb
@@ -579,17 +579,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_93766/537646292.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_98702/537646292.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['wcp_bathroomsprop'].replace(0.0, np.nan, inplace=True)\n",
-      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_93766/537646292.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_98702/537646292.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['wcp_bedroomsprop'].replace(0.0, np.nan, inplace=True)\n",
-      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_93766/537646292.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_98702/537646292.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1226,16 +1226,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4448 entries, 0 to 4447\n",
+      "Data columns (total 35 columns):\n",
+      " #   Column                     Non-Null Count  Dtype  \n",
+      "---  ------                     --------------  -----  \n",
+      " 0   nexrm_propertyid           4448 non-null   object \n",
+      " 1   createdon                  4448 non-null   object \n",
+      " 2   createdby                  4448 non-null   object \n",
+      " 3   modifiedon                 4448 non-null   object \n",
+      " 4   modifiedby                 4448 non-null   object \n",
+      " 5   createdbyname              4448 non-null   object \n",
+      " 6   createdbyyominame          4448 non-null   object \n",
+      " 7   modifiedbyname             4448 non-null   object \n",
+      " 8   modifiedbyyominame         4448 non-null   object \n",
+      " 9   organizationid             4448 non-null   object \n",
+      " 10  organizationidname         4448 non-null   object \n",
+      " 11  statecode                  4448 non-null   int64  \n",
+      " 12  statecodename              4448 non-null   object \n",
+      " 13  statuscode                 4448 non-null   int64  \n",
+      " 14  statuscodename             4448 non-null   object \n",
+      " 15  timezoneruleversionnumber  4295 non-null   float64\n",
+      " 16  utcconversiontimezonecode  4295 non-null   float64\n",
+      " 17  nexrm_name                 4448 non-null   object \n",
+      " 18  nexrm_address1             3990 non-null   object \n",
+      " 19  nexrm_city                 3990 non-null   object \n",
+      " 20  nexrm_state                3990 non-null   object \n",
+      " 21  nexrm_zip                  3990 non-null   float64\n",
+      " 22  wcp_propertytypeid         4356 non-null   float64\n",
+      " 23  wcp_propertytypeidname     4356 non-null   object \n",
+      " 24  wcp_bedroomsprop           4031 non-null   float64\n",
+      " 25  wcp_sqftprop               3704 non-null   float64\n",
+      " 26  wcp_county                 3720 non-null   object \n",
+      " 27  wcp_countyname             3720 non-null   object \n",
+      " 28  nexrm_fulladdress          4026 non-null   object \n",
+      " 29  nexrm_latitude             4288 non-null   float64\n",
+      " 30  nexrm_longitude            4288 non-null   float64\n",
+      " 31  nexrm_validatedaddress     4446 non-null   object \n",
+      " 32  nexrm_countyfipscode       4171 non-null   float64\n",
+      " 33  nexrm_validatedaddresson   4275 non-null   object \n",
+      " 34  wcp_bathroomsprop          4124 non-null   float64\n",
+      "dtypes: float64(10), int64(2), object(23)\n",
+      "memory usage: 1.2+ MB\n"
+     ]
+    }
+   ],
    "source": [
-    "df.to_csv('properties_cleaned.csv', index=False, sep='\\t')"
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('properties_cleaned.csv', index=False, sep='\\t', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1304,7 @@
        "       'Mixed Use', 'Townhouse/Rowhouse'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
