--- a/clean_properties.ipynb
+++ b/clean_properties.ipynb
@@ -489,6 +489,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_df.replace('NULL', np.nan, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -541,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -572,24 +581,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_98702/537646292.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_5249/537646292.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['wcp_bathroomsprop'].replace(0.0, np.nan, inplace=True)\n",
-      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_98702/537646292.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_5249/537646292.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['wcp_bedroomsprop'].replace(0.0, np.nan, inplace=True)\n",
-      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_98702/537646292.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_5249/537646292.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1197,7 +1206,7 @@
        "9               24033.0   2022-11-24 00:11:52+00                1.1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1226,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1313,7 @@
        "       'Mixed Use', 'Townhouse/Rowhouse'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
