--- a/clean_properties.ipynb
+++ b/clean_properties.ipynb
@@ -588,17 +588,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_5249/537646292.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_6945/537646292.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['wcp_bathroomsprop'].replace(0.0, np.nan, inplace=True)\n",
-      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_5249/537646292.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_6945/537646292.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['wcp_bedroomsprop'].replace(0.0, np.nan, inplace=True)\n",
-      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_5249/537646292.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/m5/cx4hwql56m5_7gzqnfv0v5q80000gn/T/ipykernel_6945/537646292.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1321,6 +1321,49 @@
    "source": [
     "df['wcp_propertytypeidname'].unique()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, 'Prince Georges - MD', 'District of Columbia - DC',\n",
+       "       'Baltimore City - MD', 'Montgomery - MD', 'Dorchester - MD',\n",
+       "       'Fairfax - VA', 'Worcester - MD', 'Anne Arundel - MD',\n",
+       "       'Charles - MD', 'Fauquier - VA', 'Calvert - MD',\n",
+       "       'Chesterfield - VA', 'Baltimore - MD', 'Richmond City - VA ',\n",
+       "       'Harford - MD', 'Spotsylvania - VA', 'Philadelphia - PA ',\n",
+       "       'Prince William - VA', 'Howard - MD', 'Arlington - VA',\n",
+       "       'Clarke - VA', 'Salem - VA', 'Stafford - VA', 'Garrett - MD',\n",
+       "       'Gloucester - VA', 'Loudoun - VA', 'Norfolk City - VA',\n",
+       "       'Warren - VA', 'Frederick - MD', 'Washington - MD',\n",
+       "       'Pinellas - FL ', 'Carroll - MD', 'Allegheny - PA ',\n",
+       "       'James City - VA', 'Wicomico - MD', 'Allegany - MD',\n",
+       "       'King George - VA', 'Frederick - VA', 'Talbot - MD',\n",
+       "       'Henrico - VA', 'Virginia Beach City - VA', 'Fairfax City - VA',\n",
+       "       'Cecil - MD', 'Orange - VA', 'Pulaski - VA', 'Caroline - VA',\n",
+       "       'York - VA', 'Alexandria - VA ', 'City of Alexandria - VA'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['wcp_countyname'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
